# Benchmark-game

./: .coveragerc  .gitignore  LICENSE  PUBLIC_MIRROR_MANIFEST.md  README.md  mypy.ini  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-human-ui.txt  requirements-paper-artifact.txt  requirements.txt
docs/: ARCHITECTURE.md  ARCHIVE_LOG.md  CONTRIBUTING.md  HUMAN_DATA_GOVERNANCE.md  INDEX.md  LOCAL_COMPANION.md  PUBLIC_MIRROR.md  STYLE.md  benchmarking.md  research-notes.md
gf01/: __init__.py  __main__.py  baselines.py  checks.py  cli.py  cli_registry.py  cli_registry_p0.py  cli_registry_pilot.py  cli_registry_playback.py  cli_registry_q033.py  cli_registry_quality.py  cli_registry_workflows.py  formal_loader.py  gate.py  generator.py  identifiability.py  io.py  meta.py  metrics.py  models.py  play.py  profiling.py  q033.py  repo_contract.py  semantics.py  verifier.py
spec/: acceptance-tests.md  contract_inventory.json  contracts.md  environment.md  overview.md  parity.md  plan.md
tests/: dec_id_utils.py  repo_scope.py  test_compliance_audit_consistency.py  test_dec_id_utils.py  test_decision_log_integrity.py  test_decision_log_structure.py  test_docs_spec_sync.py  test_gf01_adaptation_policy.py  test_gf01_artifact_determinism.py  test_gf01_ci_policy.py  test_gf01_formal_loader.py  test_gf01_gate_sharding.py  test_gf01_identifiability_policy.py  test_gf01_p0_feedback_check.py  test_gf01_p0_feedback_template.py  test_gf01_p0_gate.py  test_gf01_p0_init.py  test_gf01_p0_seed_pack.py  test_gf01_p0_session_check.py  test_gf01_pilot_analysis.py  (+22 more)
(+27 files in other folders)
